--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Virtual Card Issuance Platform
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:virtualcarddb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=virtualcarduser
+spring.datasource.password=virtualcardpass
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
